--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>medical</artifactId>
     <packaging>war</packaging>
     <version>1.0.0</version>
-    <name>javaee7 Maven Webapp</name>
+    <name>javaee8 Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -15,7 +15,7 @@
         <!--<application.server.dir>D:/Application/Payara/payara41</application.server.dir>-->
 
 
-        <application.server.dir>E:/Application/glassfish/glassfish4</application.server.dir>
+        <application.server.dir>C:/PC/javaProject/glassfish6/glassfish5</application.server.dir>
         <!--<application.server.dir>D:/Application/glassfish/glassfish4</application.server.dir>-->
 
         <host.name>localhost</host.name>
@@ -28,13 +28,12 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <scala.version>2.10.4</scala.version>
     </properties>
 
 
     <dependencies>
-
 
 
         <dependency>
@@ -61,17 +60,17 @@
             <version>0.1.0</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>io.github.cloudify</groupId>
             <artifactId>spdf_2.9.3</artifactId>
             <version>1.3.3</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>2.6</version>
-    </dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -110,7 +109,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
+            <version>8.0.1</version>
         </dependency>
 
 
@@ -127,13 +126,6 @@
             <artifactId>jersey-servlet</artifactId>
             <version>1.19</version>
         </dependency>-->
-
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-servlet</artifactId>
-            <version>${jersey.version}</version>
-            <scope>provided</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
@@ -168,7 +160,6 @@
         </dependency>
 
 
-
         <!--
                 <dependency>
                     <groupId>org.jboss.arquillian.junit</groupId>
@@ -186,17 +177,17 @@
                 </dependency>
         -->
 
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
+        <!--        <dependency>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                    <version>${scala.version}</version>
+                </dependency>
 
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.10</artifactId>
-            <version>3.2.0-SNAP4</version>
-        </dependency>
+                <dependency>
+                    <groupId>org.scalatest</groupId>
+                    <artifactId>scalatest_2.10</artifactId>
+                    <version>3.2.0-SNAP4</version>
+                </dependency>-->
 
 
     </dependencies>
@@ -221,15 +212,16 @@
 
     <build>
 
-        <finalName>${artifactId}</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
@@ -354,7 +346,6 @@
                     </domain>
 
 
-
                     <components>
                         <component>
                             <name>${project.artifactId}</name>
@@ -373,9 +364,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-
-
 
 
             <plugin>
@@ -406,9 +394,6 @@
             </plugin>
 
 
-
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -422,54 +407,59 @@
                 </configuration>
             </plugin>
 
-<!--
+            <!--
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.5.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>fish.payara.extras</groupId>
-                        <artifactId>payara-micro</artifactId>
-                        <version>4.1.1.162</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>payara-uber-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>fish.payara.micro.PayaraMicro</mainClass>
-                            <arguments>
-                                <argument>&#45;&#45;deploy</argument>
-                                <argument>${project.basedir}/target/${project.build.finalName}.war</argument>
-                                <argument>&#45;&#45;outputUberJar</argument>
-                                <argument>${project.basedir}/target/${project.build.finalName}.jar</argument>
-                            </arguments>
-                            <includeProjectDependencies>false</includeProjectDependencies>
-                            <includePluginDependencies>true</includePluginDependencies>
-                            <executableDependency>
-                                <groupId>fish.payara.extras</groupId>
-                                <artifactId>payara-micro</artifactId>
-                            </executableDependency>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>exec-maven-plugin</artifactId>
+                            <version>1.5.0</version>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>fish.payara.extras</groupId>
+                                    <artifactId>payara-micro</artifactId>
+                                    <version>4.1.1.162</version>
+                                </dependency>
+                            </dependencies>
+                            <executions>
+                                <execution>
+                                    <id>payara-uber-jar</id>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>java</goal>
+                                    </goals>
+                                    <configuration>
+                                        <mainClass>fish.payara.micro.PayaraMicro</mainClass>
+                                        <arguments>
+                                            <argument>&#45;&#45;deploy</argument>
+                                            <argument>${project.basedir}/target/${project.build.finalName}.war</argument>
+                                            <argument>&#45;&#45;outputUberJar</argument>
+                                            <argument>${project.basedir}/target/${project.build.finalName}.jar</argument>
+                                        </arguments>
+                                        <includeProjectDependencies>false</includeProjectDependencies>
+                                        <includePluginDependencies>true</includePluginDependencies>
+                                        <executableDependency>
+                                            <groupId>fish.payara.extras</groupId>
+                                            <artifactId>payara-micro</artifactId>
+                                        </executableDependency>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
 
--->
+            -->
 
         </plugins>
-
 
 
     </build>
 
     <repositories>
+
+        <repository>
+            <id>maven1</id>
+            <name>Maven11</name>
+            <url>https://mvnrepository.com/artifact</url>
+        </repository>
 
 
         <repository>
@@ -477,9 +467,6 @@
             <name>Maven22</name>
             <url>http://central.maven.org/maven2</url>
         </repository>
-
-
-
 
 
     </repositories>
